Improved scaling the layout for smaller screens

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Goblins</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -38,7 +37,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, maxime quis aliquid cupiditate tempora corporis dolorum!</p>
             <a href="#">Compare</a>
             <a href="#" class="ctaa">
-                <i class="ri-play-fill"></i>Watch Gameplay
+                <i class='bx bx-play bx-sm'></i>Watch Gameplay
             </a>
         </div>
 
