Improved scaling the layout for smaller screens

--- a/index.html
+++ b/index.html
@@ -30,15 +30,19 @@
     </header>
 
     <section class="hero">
-        <div class="hero-text">
-            <h5>#2 Trending</h5>
-            <h4>Lead Supercell</h4>
-            <h1>GOBLINS</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, maxime quis aliquid cupiditate tempora corporis dolorum!</p>
-            <a href="#">Compare</a>
-            <a href="#" class="ctaa">
-                <i class='bx bx-play bx-sm'></i>Watch Gameplay
-            </a>
+        <div class="hero-description">
+            <div class="hero-text">
+                <h5>#2 Trending</h5>
+                <h4>Lead Supercell</h4>
+                <h1>GOBLINS</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, maxime quis aliquid cupiditate tempora corporis dolorum!</p>
+            </div>
+            <div class="hero-buttons">
+                <a href="#">Compare</a>
+                <a href="#" class="ctaa">
+                    <i class='bx bx-play bx-sm'></i>Watch Gameplay
+                </a>
+            </div>
         </div>
 
         <div class="hero-img">
